[gd_scene load_steps=2 format=3 uid="uid://bplib8x3v7ia"]

[ext_resource type="Script" path="res://scripts/ui/BlueprintLibraryPanel.gd" id="1"]

[node name="BlueprintLibraryPanel" type="ColorRect"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleBar" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Biblioteca de Blueprints"
horizontal_alignment = 1

[node name="CloseBtn" type="Button" parent="PanelContainer/VBox/TitleBar"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "âœ•"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBox"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="BlueprintList" type="VBoxContainer" parent="PanelContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4
